--- a/index.html
+++ b/index.html
@@ -1,27 +1,107 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
-  </head>
-  <body>
-    <script>
 
-      $(document).ready(function(){
+    <script src="./jquery-timeago/jquery.timeago.js" type="text/javascript"></script>
+    <script src="moment.js"></script>
+    <script src="livestamp.js"></script>
+</head>
+
+<body>
+
+    <script>
+    $(document).ready(function() {
+        jQuery("abbr.timeago").timeago();
+        jQuery("abbr.livestamp").livestamp();
         var $body = $('body');
         $body.html('');
-
         var index = streams.home.length - 1;
-        while(index >= 0){
-          var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
-          $tweet.appendTo($body);
-          index -= 1;
+        while (index >= 0) {
+            var tweet = streams.home[index];
+            var $tweet = $('<div></div>');
+            $tweet.text(jQuery.timeago(tweet.created_at) + '  @' + tweet.user + ': ' + tweet.message);
+            $tweet.appendTo($body);
+            console.log(index);
+            index -= 1;
+        }
+        index = 11;
+        // $("#nextButton").css({ // "position": "fixed", // "top": 10, // "left": 50 // });
+        loadButton();
+
+        function prepender() {
+            var counter;
+            console.log("it works");
+            index + 10 < streams.home.length ? counter = index + 10 : counter = streams.home.length;
+            $("#nextTweets").remove();
+            while (index < counter) {
+                tweet = streams.home[index];
+                $tweet = $('<div></div>');
+                $tweet.text(jQuery.timeago(tweet.created_at) + '  @' + tweet.user + ': ' + tweet.message);
+                $tweet.prependTo($body);
+                index++;
+            }
+            // $($body).prepend("<div id='nextButton'><button id='nextTweets'>Next 10</button></div>");
+            console.log(index);
+            loadButton();
         }
 
-      });
-
+        function loadButton() {
+                $($body).delay(5000).prepend("<header id='nextButton'><button id='nextTweets'>Next 10</button></header>");
+                $("#nextTweets").on("click", function() {
+                    prepender();
+                });
+            }
+            //so figure out the index...
+            // allow it to update "next ten" every few seconds
+            // also update every timestamp
+    });
     </script>
-  </body>
+</body>
+
 </html>
+<!-- What's Already Here
+
+This is a mostly-empty repo, with a file that creates some data that represents twitter users and their tweets. It's the data you would expect to see if you had created a twitter account and followed a few people. (More tweets appear over time.)
+
+That file is called data_generator.js. You don't need to understand the code that's in it, but here's what it does:
+
+Creates two global variables, users and streams.
+users is an array of strings -- all the usernames that you're following.
+streams is an object with two properties, users and home.
+streams.home is an array of all tweets from all the users you're following.
+streams.users is an object with properties for each user. streams.users.shawndrost has all of shawndrost's tweets.
+Kicks off a periodic process that puts more data in streams.
+You'll mostly be working in the javascript block of index.html. Note: The generated tweets will be displayed in reverse chronological order.
+
+Basic Requirements:
+
+Show the user new tweets somehow. (You can show them automatically as they're created, or create a button that displays new tweets.)
+Display the timestamps of when the tweets were created.
+Design your interface so that you want to look at and use the product you're making.
+Allow the user to click on a username to see that user's timeline.
+Extra credit:
+
+Show when the tweets were created in a human-friendly way (eg "10 minutes ago"). You'll want to find and use a library for this.
+Allow the user to tweet. (This is going to require you to understand a little more about data_generator.js, but you shouldn't need to modify anything.) -->
+
+<!-- $(document).ready(function() {
+  $(".tour").on("mouseenter", function() {
+    $(this).css("background-color", "#252b30");
+  });
+});
+ -->
+
+<!-- $(document).ready(function() {
+  $(".tour").on("mouseenter", function() {
+    $(this).addClass("highlight");
+    $(this).find(".per-night").animate({"top": "-14px","opacity": "1"}, "fast");
+  });
+  $(".tour").on("mouseleave", function() {
+    $(this).removeClass("highlight");
+      $(this).find(".per-night").animate({"top": "0px","opacity": "0"}, "fast");
+  });
+});
+ -->
