--- a/index.html
+++ b/index.html
@@ -5,40 +5,51 @@
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    <script src="./jquery-timeago/jquery.timeago.js" type="text/javascript"></script>
-    <script src="moment.js"></script>
-    <script src="livestamp.js"></script>
+    <script src="jquery.timeago.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    jQuery(document).ready(function() {
+        $("abbr.timeago").timeago();
+    });
+    </script>
 </head>
 
 <body>
 
-    <!-- ///////////////////to do : fix userpage/next bug. fix timestamp. allow user to tweet. clean up. -->
+    <!-- ///////////////////to do : fix timestamp. allow user to tweet. clean up. don't make functions in a loop-->
+    <!-- prettify. maybe make font size relative to width? that'd be cool. -->
+    <!-- maybe it should be a scrollable windows with an input box at the bottom to add your tweets -->
     <script>
     $(document).ready(function() {
-        jQuery("abbr.timeago").timeago();
-        jQuery("abbr.livestamp").livestamp();
-        streams.users.shawndrost = [];
+        streams.users.playerone = [];
         var $body = $('body');
         $body.html('');
-        var index = 0;
-        var userToggle = false;
-        var counter, author;
+        var index = 0,
+            userToggle = false,
+            counter, author, wasTrue;
         prepender();
 
-        function prepender() {
-            if (userToggle === true) {
+        function prepender(isTen) {
+            if (userToggle === true) { //come out of userpage before updating
                 userPage(author);
+                wasTrue = true; // if in userpage, display only those user's new tweets
             }
-            index + 10 < streams.home.length ? counter = index + 10 : counter = streams.home.length;
-            $("#nextTweets").remove();
+            isTen === "ten" ? counter = index + 10 : counter = streams.home.length;
+            if (index + 10 >= streams.home.length) {
+                counter = streams.home.length;
+            }
+            console.log(index);
+            console.log(counter);
+            $("#headRow").remove();
             while (index < counter) {
                 tweet = streams.home[index];
-                $tweet = $('<div class="tweetLine"></div>');
+                $tweet = $('<div></div>'); //removed class="tweetLine"
                 var a = document.createElement('a');
                 var linkText = document.createTextNode(tweet.user);
                 a.appendChild(linkText);
                 a.title = tweet.user;
                 $(a).addClass(tweet.user);
+                var styleMultiplier = 10 / tweet.user.length
+                $(a).css("font-size", styleMultiplier + "em");
                 $(a).on("click", function() {
                     userPage(this);
                 });
@@ -52,21 +63,29 @@
                 var timeCreatedText = jQuery.timeago(tweet.created_at);
                 timeCreated.appendChild(document.createTextNode(timeCreatedText));
                 $(timeCreated).addClass(timeCreated);
-                $tweet.append(timeCreated).append('  @').append(a).append(tweet.message).css("font-family", "Garamond");
+                styleMultiplier = 10 / timeCreated.length;
+                $(timeCreated).css("font-size", styleMultiplier + "em");
+                styleMultiplier = 30 / tweet.message.length;
+                var tweetText = tweet.message;
+                $tweet.append(timeCreated).append('  @').append(a).append(tweetText).css("font-size", styleMultiplier + "em");
                 $tweet.prependTo($body);
                 index++;
             }
-            loadButton();
+            if (wasTrue === true) { //works if you pass it once, but not more than once
+                userToggle = !userToggle
+                userPage(author);
+                wasTrue = !wasTrue;
+            }
+            LoadButtons();
         }
 
-        function loadButton() {
-            $($body).prepend("<header id='nextButton'><button id='nextTweets'>&uarr;</button></header>");
-            $("#nextButton").css({
-                "margin-left": "100px",
-                "border-width": "thin",
-            });
-            $("#nextTweets").on("click", function() {
-                prepender();
+        function LoadButtons() {
+            $($body).prepend("<header id='headRow'>Twittler <button id='ten' class='nextTweets'>&uarr;</button><button id='all' class='nextTweets'>&uarr;&uarr;</button><input id='playerone' type='text' placeholder='Got something to say?'/><button id='playeroneTweet' value='playerOneTwittle'>twittle</button></header>");
+            $(".nextTweets").on("click", function() {
+                var isTen = this.id;
+                console.log(isTen);
+                prepender(isTen);
+                $("#playeroneTweet").on("click", function(input) {})
             });
         }
 
@@ -76,6 +95,10 @@
                 isUser === author ? null : $("div ." + isUser).parent().slideToggle();
             });
             userToggle = !userToggle;
+        }
+
+        function twittle(input) {
+            console.log(input);
         }
     });
     </script>
