--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    <script src="jquery.timeago.js" type="text/javascript"></script>
+    <script src="moment.js"></script>
+    <script src="livestamp.js"></script>
     <script type="text/javascript">
-    jQuery(document).ready(function() {
-        $("abbr.timeago").timeago();
-    });
     </script>
 </head>
 
@@ -20,14 +18,19 @@
     <!-- maybe it should be a scrollable windows with an input box at the bottom to add your tweets -->
     <script>
     $(document).ready(function() {
-        streams.users.playerone = [];
         var $body = $('body');
         $body.html('');
         var index = 0,
             userToggle = false,
             counter, author, wasTrue;
         prepender();
-
+        //
+        window.visitor = "player1";
+        streams.users.player1 = [];
+        // window.streams.users.push = "player1";
+        // users.push("player1");
+        writeTweet("just checking that this works");
+        //
         function prepender(isTen) {
             if (userToggle === true) { //come out of userpage before updating
                 userPage(author);
@@ -37,20 +40,17 @@
             if (index + 10 >= streams.home.length) {
                 counter = streams.home.length;
             }
-            console.log(index);
-            console.log(counter);
             $("#headRow").remove();
             while (index < counter) {
                 tweet = streams.home[index];
-                $tweet = $('<div></div>'); //removed class="tweetLine"
+                $tweet = $('<div></div>');
                 var a = document.createElement('a');
                 var linkText = document.createTextNode(tweet.user);
                 a.appendChild(linkText);
                 a.title = tweet.user;
                 $(a).addClass(tweet.user);
-                var styleMultiplier = 10 / tweet.user.length
                 $(a).css("font-size", styleMultiplier + "em");
-                $(a).on("click", function() {
+                $(a).on("click", function() { // these functions only seem to bind when they're made here.
                     userPage(this);
                 });
                 $(a).on("mouseenter", function() {
@@ -59,20 +59,22 @@
                 $(a).on("mouseleave", function() {
                     $(this).css("background-color", "black");
                 });
-                var timeCreated = document.createElement('timeCreated');
-                var timeCreatedText = jQuery.timeago(tweet.created_at);
-                timeCreated.appendChild(document.createTextNode(timeCreatedText));
-                $(timeCreated).addClass(timeCreated);
-                styleMultiplier = 10 / timeCreated.length;
-                $(timeCreated).css("font-size", styleMultiplier + "em");
-                styleMultiplier = 30 / tweet.message.length;
-                var tweetText = tweet.message;
-                $tweet.append(timeCreated).append('  @').append(a).append(tweetText).css("font-size", styleMultiplier + "em");
-                $tweet.prependTo($body);
+                var timeCreated = tweet.created_at;
+                timeCreated = timeCreated.toISOString();
+                $tweet.prependTo($body); //.css("opacity", 0);
+                $tweet.append('<span class="livestamp" id=index data-livestamp="' + timeCreated + '"></span>');
+                var styleMultiplier = styleMultiplier = 10 / (timeCreated.length);
+                $(".livestamp #" + index).css("font-size", styleMultiplier + "em");
+                $tweet.append('<span class="at">  @</span>').append(a);
+                $tweet.append('<span class="message">' + tweet.message + '</span>');
+                styleMultiplier = styleMultiplier = 150 / (tweet.message.length);
+                $($tweet).css("font-size", styleMultiplier);
+                // $tweet.animate({ // opacity: 100  //animating creates a huge lag with userpage
+                // }, 30000);
                 index++;
             }
-            if (wasTrue === true) { //works if you pass it once, but not more than once
-                userToggle = !userToggle
+            if (wasTrue === true) { //works if you pass it once, but not more than once. needs a variable - areWeInUserPage
+                userToggle = !userToggle;
                 userPage(author);
                 wasTrue = !wasTrue;
             }
@@ -80,26 +82,32 @@
         }
 
         function LoadButtons() {
-            $($body).prepend("<header id='headRow'>Twittler <button id='ten' class='nextTweets'>&uarr;</button><button id='all' class='nextTweets'>&uarr;&uarr;</button><input id='playerone' type='text' placeholder='Got something to say?'/><button id='playeroneTweet' value='playerOneTwittle'>twittle</button></header>");
+            updateInterval = 0;
+            $($body).prepend("<header id='headRow'>Twittler <button id='ten' class='nextTweets'>&uarr;</button><button id='all' class='nextTweets'>&uarr;&uarr;</button><input type='text' placeholder='Got something to say?'/><button id='playerOneTweet' >twittle</button></header>");
             $(".nextTweets").on("click", function() {
                 var isTen = this.id;
-                console.log(isTen);
                 prepender(isTen);
-                $("#playeroneTweet").on("click", function(input) {})
             });
+            $("#playerOneTweet").click(function() {
+                twittle();
+            });
+            updateInterval = 1000;
         }
 
         function userPage(user) {
             userToggle === true ? null : author = user.title;
+            users.push("player1"); //if users isn't there, they don't get filtered out of userpage. if they are, they get auto-tweets.
             users.forEach(function(isUser) {
                 isUser === author ? null : $("div ." + isUser).parent().slideToggle();
             });
+            users.pop();
             userToggle = !userToggle;
         }
 
-        function twittle(input) {
-            console.log(input);
-        }
+        function twittle() { // move this input field to the right.   // only allows username 'player1' for now. //clear input box
+            var myTwit = $('input:text').val();
+            writeTweet(myTwit);
+        };
     });
     </script>
 </body>
