everything works except loading new tweets from userpage more than once. header needs styling.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 <body>
 
-    <!-- ///////////////////to do : clean up. don't make functions in a loop-->
-    <!-- prettify. maybe make font size relative to width? that'd be cool. -->
+    <!-- ///////////////////to do : make header nicer. fix userpage/loadnew bug. don't make functions in a loop-->
     <!-- maybe it should be a scrollable windows with an input box at the bottom to add your tweets? some kind of animation instead -->
     <script>
     $(document).ready(function() {
