fixed bug where tweeting nothing crashed feed

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
 
         function twittle() {
             var myTwit = $('input:text').val();
+            if (myTwit === "") {
+                return;
+            }
             myTwit = " " + myTwit;
             writeTweet(myTwit);
             $('#tweetBox').val('');
